Modificada referencia a nombre de imagenes de docker hub

--- a/infra/k8s/moderation-depl.yaml
+++ b/infra/k8s/moderation-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers: 
         - name: moderation
-          image: edssn/moderation
+          image: edissonsigua/moderation
 ---
 apiVersion: v1
 kind: Service
