--- a/infra/k8s/query-depl.yaml
+++ b/infra/k8s/query-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers: 
         - name: query
-          image: edssn/query
+          image: edissonsigua/query
 ---
 apiVersion: v1
 kind: Service
