--- a/infra/k8s/comments-depl.yaml
+++ b/infra/k8s/comments-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers: 
         - name: comments
-          image: edssn/comments
+          image: edissonsigua/comments
 ---
 apiVersion: v1
 kind: Service
