--- a/infra/k8s/event-bus-depl.yaml
+++ b/infra/k8s/event-bus-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers: 
         - name: event-bus
-          image: edssn/event-bus
+          image: edissonsigua/event-bus
 ---
 apiVersion: v1
 kind: Service
