--- a/infra/k8s/posts-depl.yaml
+++ b/infra/k8s/posts-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers: 
         - name: posts
-          image: edssn/posts
+          image: edissonsigua/posts
 ---
 apiVersion: v1
 kind: Service
