--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,7 +8,7 @@ build:
   local:
     push: false
   artifacts:
-    - image: edssn/client
+    - image: edissonsigua/client
       context: client
       docker:
         dockerfile: Dockerfile
@@ -16,7 +16,7 @@ build:
         manual:
           - src: 'src/**/*.js'
             dest: .
-    - image: edssn/comments
+    - image: edissonsigua/comments
       context: comments
       docker:
         dockerfile: Dockerfile
@@ -24,7 +24,7 @@ build:
         manual:
           - src: '*.js'
             dest: .
-    - image: edssn/event-bus
+    - image: edissonsigua/event-bus
       context: event-bus
       docker:
         dockerfile: Dockerfile
@@ -32,7 +32,7 @@ build:
         manual:
           - src: '*.js'
             dest: .
-    - image: edssn/moderation
+    - image: edissonsigua/moderation
       context: moderation
       docker:
         dockerfile: Dockerfile
@@ -40,7 +40,7 @@ build:
         manual:
           - src: '*.js'
             dest: .
-    - image: edssn/posts
+    - image: edissonsigua/posts
       context: posts
       docker:
         dockerfile: Dockerfile
@@ -48,7 +48,7 @@ build:
         manual:
           - src: '*.js'
             dest: .
-    - image: edssn/query
+    - image: edissonsigua/query
       context: query
       docker:
         dockerfile: Dockerfile
